# awsgenaihackathon

./: .env.example  .gitignore  .gitignore copy  AGENT_GUIDE.md  AWS_DEPLOY.md  DEPLOYMENT.md  DEPLOY_SUMMARY.md  DEVELOPER-GUIDE.md  FEATURES.md  Makefile  MealBuddy_Demo_Script.docx  Procfile  README.md  architecture  cloudformation delete-stack --stack-name cooking-assistant-stack --region ap-southeast-2  pyproject.toml  requirements.txt  ~$alBuddy_Demo_Script.docx
data/: nutrition_guidelines.txt  recipe_001_grilled_chicken_salad.txt  recipe_002_vegetarian_buddha_bowl.txt  recipe_003_salmon_roasted_vegetables.txt  recipe_004_mushroom_shakshuka.txt  recipe_005_lentil_curry.txt  recipe_006_quinoa_veggie_stir_fry.txt  recipe_007_greek_yogurt_parfait.txt  recipe_008_tofu_scramble.txt  recipe_009_zucchini_noodles_chicken.txt  recipe_010_protein_power_bowl.txt  recipe_011_mediterranean_salmon.txt  recipe_012_chickpea_pumpkin_soup.txt  recipe_012_creamy_pea_pasta.txt  recipe_013_lentil_halloumi_pie.txt  recipe_014_zesty_thai_noodle_salad.txt
infrastructure/: cloudformation.yaml
scripts/: cleanup.sh  deploy.sh  deploy_full.sh  deploy_lambda.sh  generate_architecture_diagram.py  generate_diagram.py  index_recipes.py  package_lambda.sh  update_lambda.sh  upload_ui.sh
scripts/misc/: generate_demo_script.py  generate_diagram.py  generate_pdfs.py
src/: app.py  app_local.py  lambda_function.py
src/frontend/js/: 01-core.js  (+13 more)
src/models/: bedrock_rag.py
src/templates/: index.html
src/utils/: analytics.py  config.py  helpers.py  recommendations.py  responses.py  storage.py
(+5 files in other folders)
