[project]
name = "cooking-assistant"
version = "0.1.0"
description = "AI Cooking Assistant RAG Chatbot"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
